--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <h1 style="text-align: center;">Demo of Test Application</h1>
+    <h1 style="text-align: center;">Demo of OneMT Application</h1>
     <div id="root"></div>
     <!--
       This HTML file is a template.
